# c3po

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: check-style-and-types.yml  ci.yml  styles.yml
sources/c3po/: __init__.py  __main__.py  bot.py
sources/c3po/logging/: __init__.py  handlers.py
