[tool.poetry]
name = "c3po"
version = "0.0.0"
description = "Music C3PO for Discord."
authors = ["Rasmus8800 <posta22@inbox.ru>", "amayakasa <contact@amayakasa.xyz>"]
readme = "README.md"
packages = [
    { include = "c3po", from = "sources" }
]

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.1"
wavelink = "^2.6.0"

[tool.poetry.group.linters.dependencies]
black = "^23.7.0"
ruff = "^0.0.278"

[tool.poetry.group.tests.dependencies]
coverage = "^7.2.7"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.black]
preview = true
safe = true
line-length = 79
target-version = ["py311"]

[tool.coverage.run]
branch = true
source = ["sources"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
pythonpath = ["sources"]
testpaths = ["tests"]